1 November 2012: Wouter
	- Fix default settings for rrl.

30 October 2012: Wouter
	- --enable-ratelimit enables RRL code (ported from NSD4).

18 October 2012: Matthijs
	- Bump version

11 October 2012: Wouter
	- Fix build on OpenBSD (Thanks Oliver Peter).

28 September 2012: Wouter
	- fixed --disable-full-prehash when new nsd.db is read in and there
	  are already ixfrs to apply, it did not rehash the new nsd.db.

21 September 2012: Wouter
	- tzset before chroot for correct timezone (from Camiel Dobbelaar).

11 September 2012: Wouter
	- writev support for TCP.

27 Agust 2012: Yuri
      - Fix crash in zonec if TXT string too long.
        (thanks Ilya Bakulin)

21 August 2012: Matthijs
	- Fix hang on exit in xfrd.
	- Fix bug#464: Conditionally define MAXHOSTNAMELEN

9 August 2012: Matthijs
	- Code review (Thanks CZ.NIC)

26 July 2012: Yuri
	- Prioritize notify sender for requesting XFR.
	  (thanks Ilya Bakulin)

25 July 2012: Matthijs
	- Bug #461: NSD denial of service vulnerability when using
	  per zone statistics.

23 July 2012: Matthijs
	- Fix for nsd-patch segfault if zone has been removed from nsd.conf
	  (thanks Ilya Bakulin)

19 July 2012: Willem
	- Fix for VU#624931 CVE-2012-2978: NSD denial of service 
	  vulnerability from non-standard DNS packet from any host
	  on the internet.
	  http://www.nlnetlabs.nl/downloads/CVE-2012-2978.txt

18 July 2012: Wouter
	- Fix bug#460: man page correction - identity.

19 June 2012: Matthijs
	- Fix restart failed after removing zone (that still lives in ixfr.db)

18 June 2012: Matthijs
	- Bug #453: typo in nsdc man page

1 June 2012: Matthijs
	- Per zone stats, enable with --enable-zone-stats.

31 May 2012: Matthijs
	- Fix for accept spinning reported by OpenBSD.

17 April 2012: Matthijs
	- Changes according to RFC 5936 (AXFR clarify) and EDNS0bis.

16 April 2012: Matthijs
	- Allow for fd 0 in ipc.
	- Add TLSA RRtype support.

4 April 2012: Matthijs
	- Add ECDSA support for zonec

2 April 2012: Matthijs