@@ -1,3 +1,6 @@
+2 November 2012: Wouter
+	- Fix bug 478: declaration after statement (for gcc 2.95).
+
 1 November 2012: Wouter
 	- Fix default settings for rrl.
 
